[project]
name = "ableton-control-surface-faderfox"
version = "0.0.2"
description = ""
dynamic = ["dependencies"]
requires-python=">=3.7"

[tool.ruff]
lint.select = ["E", "F", "B", "W", "I" ,"UP", "ANN", "BLE", "FBT", "A", "COM", "C4", "DTZ", "PIE", "Q", "RET", "SIM", "PL", "RUF"]
lint.extend-select = ["I"]
lint.fixable = ["ALL"]
line-length = 120
lint.ignore = ["ANN101"]
target-version = "py37"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}